WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301912
REGRESSION(
302186@main
): [WPE] Build broken when targeting Android
https://bugs.webkit.org/show_bug.cgi?id=301912
Summary
REGRESSION(302186@main): [WPE] Build broken when targeting Android
Adrian Perez
Reported
2025-11-03 23:22:06 PST
failed: Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/platform/graphics/android/GraphicsContextGLTextureMapperAndroid.cpp.o /home/aperez/devel/WebKit-Android/Source/WebCore/platform/graphics/android/GraphicsContextGLTextureMapperAndroid.cpp:43:42: error: expected unqualified-id 43 | if (!enableExtensions(GCGLExtension::GL_OES_EGL_image)) | ^ /home/aperez/wpe/cerbero/build/sources/android_arm64/wpewebkit-2.50.0/b/ANGLE/Headers/ANGLE/glext.h:54:26: note: expanded from macro 'GL_OES_EGL_image' 54 | #define GL_OES_EGL_image 1 | ^ /home/aperez/devel/WebKit-Android/Source/WebCore/platform/graphics/android/GraphicsContextGLTextureMapperAndroid.cpp:108:24: error: expected unqualified-id 108 | GCGLExtension::GL_OES_EGL_image, | ^ /home/aperez/wpe/cerbero/build/sources/android_arm64/wpewebkit-2.50.0/b/ANGLE/Headers/ANGLE/glext.h:54:26: note: expanded from macro 'GL_OES_EGL_image' 54 | #define GL_OES_EGL_image 1 | ^ 2 errors generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2025-11-03 23:50:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53380
EWS
Comment 2
2025-11-04 00:32:57 PST
Committed
302523@main
(18722fb3ee05): <
https://commits.webkit.org/302523@main
> Reviewed commits have been landed. Closing PR #53380 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-11-04 00:33:12 PST
<
rdar://problem/163994149
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug