REGRESSION(302186@main): [WPE] Build broken when targeting Android https://bugs.webkit.org/show_bug.cgi?id=301912

Reviewed by Carlos Garcia Campos.

Use GraphicsContextGLANGLE::enableExtensionsImpl() for extension names
which do not have an enumeration value in GCGLExtension. This is the
same approach used in 302186@main inside other GraphicsContextGLANGLE
subclasses.

* Source/WebCore/platform/graphics/android/GraphicsContextGLTextureMapperAndroid.cpp:
(WebCore::GraphicsContextGLTextureMapperAndroid::platformInitializeExtensions):
(WebCore::GraphicsContextGLTextureMapperAndroid::enableRequiredWebXRExtensions):

Canonical link: https://commits.webkit.org/302523@main